--- a/css/main.css
+++ b/css/main.css
@@ -1,87 +1,127 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:600,700,900');
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 80px;
+    background-color: #222222;
+}
+
+/* NAVIGATION */
 .my-navbar {
-    background: #3498db;
-    padding: 30px 15px;
+    background: #FFEB3B;
     border-color: transparent;
-    border-bottom:10px solid #2980b9;
+    padding: 10px;
+    margin: 0;
     border-radius: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .my-navbar .navbar-brand{
-    color: white;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 55px;
+    color: #222222;
+    font-size: 27px;
+    text-transform: uppercase;
 }
 
 .my-navbar .navbar-brand:hover{
-    color: #AACCFF;
+    color: #e74c3c;
 }
 
 .my-navbar .nav-links li a{
-    color: white;
-    font-size: 25px;
+    color: #222222;
+    font-size: 20px;
     margin-left: 15px;
+    letter-spacing: -1px;
+    text-transform: uppercase;
 }
 
 .my-navbar .nav-links li a:hover{
-    color: #AACCFF;
+    color: #e74c3c;
 }
 
 .navbar-default .navbar-toggle .icon-bar{
     background-color: white;
 }
 
-
-
-
-
-
-
-
-
-
-
-/*
-body{
-    margin: 0;
-    padding: 0;
+.navbar-default .navbar-collapse, .navbar-default .navbar-form{
+    border-color: #000000;
 }
 
-#logo {
-    float:left;
-    color:#ecf0f1;
-    font-size:55px;
-    margin-top:20px;
-    margin-left:50px;
-    font-family: 'Montserrat', sans-serif;
+.navbar-default .navbar-toggle{
+    border-color: #000000;
 }
-#navbar{
-    height:100px;
+
+.navbar-default .navbar-toggle .icon-bar{
+    background-color: #000000;
+}
+.navbar-default .navbar-toggle:focus .icon-bar{
+    background-color: #ffffff;
+}
+.navbar-default .navbar-toggle:hover .icon-bar{
+    background-color: #ffffff;
+}
+
+
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover{
+    background-color: #000000;
+
+}
+
+/* CAROUSEL */
+.carousel .item img {
+    min-width: 100%;
+}
+
+.img-responsive {
     width:100%;
-    border-bottom:10px solid #2980b9;
-    background-color:#3498db;
 }
-#navbar ul{
-    list-style:none;
-}
-#navbar ul li a{
-    text-decoration:none;
-    float:left;
-    padding:20px 10px;
-    text-align:center;
-    color:#ecf0f1;
-    margin-right:100px;
-    margin-top:10px;
-    font-size:30px;
-    font-family: 'Roboto Condensed', sans-serif;
+.carousel-caption {
+    margin-bottom: 600px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 50px;
+    color: #FFEB3B;
+    text-transform: uppercase;
 }
 
-#navbar ul li a:hover{
-    color:#ecf0f1;
-}
-#navbar ul li {
-    float:left;
+#caption-button{
+    background-color: #FFEB3B;
+    color: #222222;
+    font-size: 20px;
+    padding: 10px;
+    border: #222222 solid 1px;
 }
 
-#navbar ul {
-    float: right;
-}*/
+
+/*  BUTTON STYLING */
+
+.btn-primary{
+    background-color: #FFEB3B;
+    color: #222222;
+    border-radius: 0;
+    border-color: #FFEB3B;
+}
+
+.btn-primary:hover{
+    background-color: #222222;
+    color: #FFEB3B;
+    border-color: #FFEB3B;
+}
+
+/* FOOTER */
+.footer {
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding-top: 30px;
+    color: #000000;
+    /*fixed height of the footer*/
+    height: 80px;
+    background-color: #FFEB3B;
+    border-top: 2px solid #000000;
+
+}
