--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body {
     /* Margin bottom by footer height */
     margin-bottom: 80px;
     background-color: #222222;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* NAVIGATION */
@@ -131,4 +132,27 @@ body {
     height: 80px;
     background-color: #FFEB3B;
 
+}
+
+#list-container .card {
+    background-color: #FFEB3B;
+    border: 2px solid #FFEB3B;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20%;
+    padding: 50px;
+}
+
+#list-container .card a {
+    color: #222222;
+    text-decoration: none;
+}
+
+#list-container .card:hover{
+    background-color: #222222;
+}
+
+#list-container .card:hover h3 a{
+    color: #FFEB3B;
 }
