--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,7 @@ body {
 #list-container .card {
     background-color: #FFEB3B;
     border: 2px solid #FFEB3B;
+    border-radius: 0;
     display: flex;
     align-items: center;
     justify-content: center;
