--- a/css/main.css
+++ b/css/main.css
@@ -190,3 +190,19 @@ table {
 .list-movie-label {
     color: #FFEB3B;
 }
+
+/*Headings*/
+.no-content{
+    color: #FFEB3B;
+}
+
+/*Alerts*/
+
+.alert-success{
+    background-color: #1abc9c;
+    color: white;
+    border: none;
+    border-radius: 0;
+    text-align: center;
+    font-size: 17px;
+}
