--- a/css/main.css
+++ b/css/main.css
@@ -206,3 +206,12 @@ table {
     text-align: center;
     font-size: 17px;
 }
+
+.alert-danger{
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    border-radius: 0;
+    text-align: center;
+    font-size: 17px;
+}
