--- a/css/main.css
+++ b/css/main.css
@@ -205,6 +205,8 @@ table {
     border-radius: 0;
     text-align: center;
     font-size: 17px;
+    position: absolute;
+    width: 100%
 }
 
 .alert-danger{
@@ -214,4 +216,6 @@ table {
     border-radius: 0;
     text-align: center;
     font-size: 17px;
+    position: absolute;
+    width: 100%;
 }
