--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,21 @@ body {
 
 }
 
+a#user-nav:focus {
+    background-color: #222222;
+    color: #FFEB3B;
+}
+
+ul#user-dropdown  {
+    background-color: #FFEB3B;
+    border: 1px solid #222222;
+    border-radius: 0;
+}
+
+ul#user-dropdown>li>a:hover {
+    background-color: inherit;
+}
+
 /* CAROUSEL */
 .carousel-caption {
     top: 30%;
@@ -91,7 +106,11 @@ body {
     font-size: 20px;
 }
 
+/* Register/Login forms */
 
+#register-page>div.container {
+    width: 600px;
+}
 
 
 /*  BUTTON STYLING */
@@ -187,7 +206,7 @@ table {
 }
 
 /* Label styling */
-.list-movie-label {
+label {
     color: #FFEB3B;
 }
 
